--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background-image: url(https://img.freepik.com/free-photo/minimalist-construction-pvc-pipes-assortment_23-2149106852.jpg?t=st=1720629450~exp=1720633050~hmac=7fbe917c46a9dfa30b91b1b66b039943ef83a73540fbf5c7b4a2ad499980ff19&w=740);
+    background-image: url(dark-blue-background-with-abstract-graphic-elements_181182-612.jpg);
     background-position: center;
     background-size: cover;
 }
